# intro-acv

./: .gitignore  acv_computacional.ipynb  acv_computacional.py  bafu_ejemplo.ipynb  bafu_ejemplo.py  bafu_ejemplo_solucion.ipynb  bafu_ejemplo_solucion.py  bafu_exploracion.ipynb  bafu_exploracion.py  ecoinvent.ipynb  ecoinvent.py  ecoinvent_ejemplo.ipynb  ecoinvent_ejemplo.py  ecoinvent_old.ipynb  ecoinvent_old.py  ejercicio.ipynb  ejercicio.py  estructuras_de_datos.ipynb  estructuras_de_datos.py  ex.fdb_latexmk  ex.fls  ex.tex  introduccion_bw.ipynb  introduccion_bw.py  lci-mi_base_de_datos.xlsx  main.ipynb  main.py  main.tex  main_es.fdb_latexmk  main_es.fls  main_es.tex  mis-aristas.csv  mis-nodos.csv  pyproject.toml  render_animation.sh  utils.ipynb  utils.py
en/: acv_computacional_en.ipynb  bafu_example_en.ipynb  bafu_exploration_en.ipynb  data_structures_en.ipynb  ecoinvent_en.ipynb  ecoinvent_example_en.ipynb  ecoinvent_old_en.ipynb  exercises_en.ipynb  introduction_bw_en.ipynb
scripts/: lca_animation.py
